problem with the navbar button covering the text solved

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -128,3 +128,7 @@ button:active {
     box-shadow: 0 0 11px 0px beige;
   }
 }
+
+.Outlet {
+  padding: 0 20px 0 30px;
+}
